test/compile_errors/stage1/obj/bad_identifier_in_function_with_struct_defined_inside_function_which_references_local_const.zig
export fn entry() void {
    const BlockKind = u32;

    const Block = struct {
        kind: BlockKind,
    };

    bogus;

    _ = Block;
}

// bad identifier in function with struct defined inside function which references local const
//
// tmp.zig:8:5: error: use of undeclared identifier 'bogus'
